--- a/Webpage/des.css
+++ b/Webpage/des.css
@@ -103,6 +103,7 @@ body{
 	display: inline-block;
 	text-align: center;
 	width: 100%;
+	
 }
 
 .loader{
@@ -174,6 +175,9 @@ body{
 	cursor: pointer;
 	text-align: center;
 	z-index: 1;
+	border: none;
+	background-color: rgba(0, 0, 0, 0);
+	padding: 0;
 }
 
 .imgarea{
@@ -239,4 +243,60 @@ body{
 	width: 80%;
 	min-width: 50px;
 	height: 50px;
+}
+
+.p3childpar{
+	margin-top: 15px;
+	margin-bottom: 15px;
+	position: relative;
+	max-width: 100%;
+	max-height: 300px;
+	font-size: 2vw;
+}
+
+.p3childpar#mixed2{
+	top: -51vw;
+}
+
+.p3childpar#mixed3{
+	top: 24vw;
+}
+
+.p3childpar#mixed4{
+	top: 24vw;
+}
+
+.p3childpar#mixed5{
+	top: 0vw;
+}
+
+button#hint{
+	border: 0;
+	height: 40px;
+	width: 80px;
+	background-color: #FFF;
+	font-size: 25px;
+	cursor: pointer;
+}
+
+@media screen and (min-width: 800px){
+	.p3childpar{
+		font-size: 20px;
+	}
+	
+	.p3childpar#mixed2{
+	top: -490px;
+	}
+
+	.p3childpar#mixed3{
+		top: 230px;
+	}
+
+	.p3childpar#mixed4{
+		top: 230px;
+	}
+
+	.p3childpar#mixed5{
+		top: 0px;
+	}
 }
