--- a/Webpage/des.css
+++ b/Webpage/des.css
@@ -20,6 +20,24 @@ body{
 	margin-top: 100px;
 	color: #777700;
 	font-size: 70px;
+	font-weight: 700;
+}
+
+a{
+	cursor: default;
+	color: #777700;
+}
+
+a:hover{
+	color: #DDDD00;
+}
+
+.pseudoa{
+	color: #777700;
+}
+
+.pseudoa:hover{
+	color: #DDDD00;
 }
 
 .coloredText2{
@@ -172,7 +190,7 @@ body{
 	height: 60px;
 	top: 0;
 	right: 0;
-	cursor: pointer;
+	/*cursor: pointer;*/
 	text-align: center;
 	z-index: 1;
 	border: none;
@@ -245,6 +263,12 @@ body{
 	height: 50px;
 }
 
+.p1sbb:focus{
+	/*outline: 10px white;*/
+	border: 3px solid green;
+	/*background: darkred;*/
+}
+
 .p3childpar{
 	margin-top: 15px;
 	margin-bottom: 15px;
@@ -275,9 +299,21 @@ button#hint{
 	height: 40px;
 	width: 80px;
 	background-color: #FFF;
+	color: #000;
 	font-size: 25px;
-	cursor: pointer;
+	/*cursor: pointer;*/
 }
+
+button#sbtn{
+	border: 0;
+	height: 40px;
+	min-width: 80px;
+	background-color: #5d88BB;
+	color: #BB6969;
+	font-size: 25px;
+	/*cursor: pointer;*/
+}
+
 
 @media screen and (min-width: 800px){
 	.p3childpar{
