--- a/Webpage/des.css
+++ b/Webpage/des.css
@@ -145,7 +145,7 @@ a:hover{
 	0% {
 		height: 0;
 	}
-	50%{
+	30%{
 		height: 0;
 	}
 	100%{
@@ -257,10 +257,12 @@ a:hover{
 	border: none;
 	/*float: left;*/
 	display: inline-block;
+	overflow: clip;
 	margin: 20;
 	width: 80%;
 	min-width: 50px;
 	height: 50px;
+	background-color: #FFF;
 }
 
 .p1sbb:focus{
