add hint button to problem 2, change css

--- a/Webpage/des.css
+++ b/Webpage/des.css
@@ -52,37 +52,36 @@ a:hover{
 	font-size: 15px;
 }
 
-.coloredText00{
+.coloredText3#p101{
 	color: #C0CA33;
-	/*font-family: Vivaldi;*/
 	font-size: 15px;
 }
 
-.coloredText01{
+.coloredText3#p102{
 	color: #FFB300;
 	/*font-family: Vivaldi;*/
 	font-size: 15px;
 }
 
-.coloredText02{
+.coloredText3#p103{
 	color: #6D4C41;
 	/*font-family: Vivaldi;*/
 	font-size: 15px;
 }
 
-.coloredText03{
+.coloredText3#p104{
 	color: #00695C;
 	/*font-family: Vivaldi;*/
 	font-size: 15px;
 }
 
-.coloredText04{
+.coloredText3#p105{
 	color: #E57373;
 	/*font-family: Vivaldi;*/
 	font-size: 15px;
 }
 
-.coloredText05{
+.coloredText3#p106{
 	color: #43A047;
 	/*font-family: Vivaldi;*/
 	font-size: 15px;
